# Blob

./: .env.example  .gitignore  README.md  agent.jsonl  backtest-results.json  demo.sh  live_portfolio.json  marketscan-sample.json  paper_portfolio.json  pyproject.toml  verify.py
.github/workflows/: agent.yml
blob/: __main__.py  agent.py  attest.py  backtest.py  config.py  costs.py  datafeed.py  execution.py  marketscan.py  mcp_client.py  portfolio.py  risk.py  scheduler.py  skills.py  strategy.py  universe.py  x402.py
bnb-sdk-demo/: .gitignore  .last_job.json  README.md  claim_u.py  demo.py  market.py  requirements.txt  signal.py
docs/: advisor-report.md  plan.md  redteam.md  runbook.md  strategy-explainer.md  strategy.md
ops/: com.blob.agent.plist
tests/: test_attest.py  test_execution.py  test_marketscan.py  test_min_trade_guarantee.py  test_ops.py  test_reliability.py  test_risk.py  test_strategy.py
