[project]
name = "blob"
version = "0.1.0"
description = "Self-custody autonomous trading agent for BNB Hack: AI Trading Agent Edition"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["blob"]
